--- a/Home.html
+++ b/Home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Priyadharsan</title>
+    <link rel="icon" type="image/*" href="https://i.postimg.cc/vgn6PLRD/Screenshot-2024-1125-163747.png">
     <link rel="stylesheet" href="home_style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
