--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Priyadharsan</title>
-    <link rel="icon" type="image/*" href="https://i.postimg.cc/vgn6PLRD/Screenshot-2024-1125-163747.png">
+    <link rel="icon" type="image/*" href="https://i.postimg.cc/zLsXb8YM/IMG-20250110-093720.jpg">
     <style>
         body {
             margin: 0;
