--- a/Home.html
+++ b/Home.html
@@ -13,9 +13,9 @@
             color: #333;
             overflow-x: hidden;
         }
-
+        
         header {
-            background: linear-gradient(90deg, #333, #444);
+            background: #158cff;
             color: white;
             display: flex;
             align-items: center;
@@ -25,7 +25,7 @@
             top: 0;
             width: 100%;
             z-index: 1000;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 10px #158cff89;
         }
 
         header h2 {
@@ -64,7 +64,7 @@
             font-size: 28px;
             text-align: left;
             padding-left: 20px;
-            color: #333;
+            color:#ff9d00 ;
             opacity: 0;
             animation: fadeIn 1s forwards;
         }
@@ -180,7 +180,7 @@
         }
 
         footer {
-            background: #333;
+            background: #ff5f2b;
             color: white;
             text-align: center;
             padding: 10px 0;
