--- a/Home.html
+++ b/Home.html
@@ -21,7 +21,7 @@
             align-items: center;
             justify-content: space-between;
             padding: 10px 20px;
-            position: fixed;
+            position: sticky ;
             top: 0;
             width: 100%;
             z-index: 1000;
