--- a/Home.html
+++ b/Home.html
@@ -10,7 +10,8 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            background: rgb(238,174,202);
+background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
             color: #333;
             overflow-x: hidden;
         }
