--- a/Home.html
+++ b/Home.html
@@ -56,7 +56,7 @@ background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 
 
         section {
             margin-bottom: 40px;
-            background: #fff;
+            background: #ffffff88 ;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
@@ -145,7 +145,7 @@ background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 
         }
 
         .project {
-            background: white;
+            background: #ffffffd0;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             padding: 15px;
