--- a/Home.html
+++ b/Home.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta property="og:title" content="Priyadharsan - AI and Full-Stack Developer">
+<meta property="og:description" content="Explore my skills, projects, and achievements in AI, data science, and development.">
+<meta property="og:image" content="https://i.postimg.cc/zLsXb8YM/IMG-20250110-093720.jpg">
+<meta property="og:url" content="https://priyadharsan.netlify.app">
+<meta property="og:type" content="website">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Priyadharsan</title>
@@ -272,6 +277,23 @@
         <p>© 2025 Priyadharsan. All rights not reserved.</p>
     </footer>
 </body>
+
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Priyadharsan",
+  "url": "https://priyadharsan.netlify.app",
+  "sameAs": [
+    "https://github.com/Priyadharsan852484",
+    "https://in.linkedin.com/in/priyadharsan-t-2b5810327",
+    "https://onecompiler.com/users/42j8ym45r"
+  ],
+  "jobTitle": "AI Developer and Full-Stack Developer",
+  "description": "Passionate about AI, data science, and building impactful solutions.",
+  "image": "https://i.postimg.cc/zLsXb8YM/IMG-20250110-093720.jpg"
+}
+</script>
 <script>
     var f=0
     function change_theme(){
