--- a/Home.html
+++ b/Home.html
@@ -476,5 +476,5 @@
 
     // Apply random theme when the page loads
     window.onload = change_theme;
-</script>t>
+</script>
                 </Html>
