--- a/Home.html
+++ b/Home.html
@@ -291,7 +291,7 @@
             <br>
             <div class="skill">Python</div>
             <div class="skill">C</div>
-            <div class="skill">Javascript</div>
+            <div class="skill">SQL</div>
             <div class="skill">HTML</div>
             <div class="skill">CSS</div>
         </section>
