--- a/friends.html
+++ b/friends.html
@@ -65,6 +65,7 @@
     <header><h2>My Friends</h2></header>
     <section>
         <ul>
+            <li>Nandish</li>
             <li>Pon Samuel</li>
             <li>Shreiyas</li>
             <li>Kamesh</li>
