--- a/Home.html
+++ b/Home.html
@@ -333,7 +333,7 @@
     <p id="en" ></p>
 
     <footer>
-        <p>© 2025 Priyadharsan. All rights not reserved.</p>
+        <p>© 2025 Priyadharsan.</p>
     </footer>
 </body>
 
