--- a/friends.html
+++ b/friends.html
@@ -56,7 +56,7 @@
         }
 
         li:hover {
-            background-color: #f1f1f1;
+            background-color: #FF66AF6F ;
             cursor: pointer;
         }
     </style>
@@ -71,7 +71,7 @@
             <li>Kamesh</li>
             <li>Manoj Mama</li>
             <li>Jasim Saad</li>
-            <li>Bala</li>
+            <li>Snap Bala</li>
         </ul>
     </section>
 </body>
