--- a/friends.html
+++ b/friends.html
@@ -58,6 +58,7 @@
         li:hover {
             background-color: #55af3a4a ;
             cursor: pointer;
+            padding : 10px;
         }
     </style>
 </head>
@@ -70,6 +71,7 @@
             <li>Shreiyas</li>
             <li>Kamesh</li>
             <li>Manoj Mama</li>
+            <li>Prabhu </li>
             <li>Jasim Saad</li>
             <li>Snap Bala</li>
         </ul>
