--- a/friends.html
+++ b/friends.html
@@ -58,7 +58,7 @@
         li:hover {
             background-color: #55af3a4a ;
             cursor: pointer;
-            padding : 10px;
+            padding : 10px 10px 10px;
         }
     </style>
 </head>
