--- a/friends.html
+++ b/friends.html
@@ -63,7 +63,7 @@
     </style>
 </head>
 <body>
-    <header><h2>My Friends</h2></header>
+    <header><h2>My Friends 🫂</h2></header>
     <section>
         <ul>
             <li>Nandish</li>
