--- a/Home.html
+++ b/Home.html
@@ -145,6 +145,7 @@
         #skills {
     display: flex;
     flex-wrap: wrap;
+    cursor:pointer;
     justify-content: center;
     gap: 20px; /* Space between skills */
     opacity: 0;
