--- a/friends.html
+++ b/friends.html
@@ -73,6 +73,7 @@
             <li>Manoj Mama</li>
             <li>Prabhu </li>
             <li>Jasim Saad</li>
+            <li>Kishore</li>
             <li>Snap Bala</li>
         </ul>
     </section>
