--- a/Home.html
+++ b/Home.html
@@ -116,8 +116,8 @@
             animation: fadeIn 1.5s forwards;
         }      
         p::selection{
-            Background-color:#3cff2b;
-            color : white ;
+            Background-color:#000000;
+            color : white ; 
             
         }
        header h2::selection{
