--- a/friends.html
+++ b/friends.html
@@ -66,13 +66,14 @@
     <header><h2>My Friends 🫂</h2></header>
     <section>
         <ul>
-            
+            <li>Santosh</li>
             <li>Manoj Mama</li>
             <li>Nandish</li>
             <li>Pon Samuel</li>
             <li>Shreiyas</li>
             <li>Kamesh</li>
             <li>Prabhu </li>
+            <li>Ranjith</li>
             <li>Jasim Saad</li>
             <li>Kishore</li>
             <li>Snap Bala</li>
