--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     }
   </style>
 </head>
-<body>
+<body title="Please click emoji">
   <div class="container">
     <div class="code">
       <span>4</span>
