update github link

--- a/Home.html
+++ b/Home.html
@@ -362,7 +362,7 @@ a {
         <section>
             <h2>Connect with Me</h2>
             <div class="social-links">
-                <a href="https://github.com/Priyadharsan852484" target="_blank">
+                <a href="https://github.com/Priyadharsant" target="_blank">
                     <img src="https://img.icons8.com/ios-filled/50/github.png" alt="GitHub">
                 </a>
                 <a href="https://in.linkedin.com/in/priyadharsan-t-2b5810327" target="_blank">
