--- a/friends.html
+++ b/friends.html
@@ -67,6 +67,7 @@
     <section>
         <ul>
             <li>Santosh</li>
+            <li>Thiruppathi</li>
             <li>Manoj Mama</li>
             <li>Nandish</li>
             <li>Pon Samuel</li>
