--- a/Home.html
+++ b/Home.html
@@ -329,7 +329,7 @@ a {
             <h2>My Skills</h2>
             <div class="skill">Python</div>
             <div class="skill">C</div>
-            <div class="skill">SQL</div>
+            <div class="skill">Java</div>
             <div class="skill">HTML</div>
             <div class="skill">CSS</div>
         </section>
