--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ transition: transform 4s ease-in-out;
   <div class="container">
     <div class="code">
       <span>4</span>
-      <span class="emoji">😔</span>
+            <span class="emoji"><a href="https://priyadharsan.netlify.app/home" class="home-button" title="Please click me!">😔</a></span> 
       <span>4</span>
     </div>
     <div class="message">Oops! The page you're looking for doesn’t exist.</div>
