--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       font-weight: bold;
       border-radius: 8px;
       text-decoration: none;
-      transition: background 1s ease;
+      transition: background 0.5s ease;
       animation: fadeIn 1s ease; 
     }
 
@@ -135,7 +135,7 @@ transition: transform 4s ease-in-out;
     <div class="message">Oops! The page you're looking for doesn’t exist.</div>
     <br>
     <span class ="link">
-        <a href="/Home.html">Home</a>
+        <a href="/Home.html">Go to Home</a>
     </span >
   </div>
   
